fix dark mode problem

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
 body {
   line-height: 1;
   font-family: "Poppins", sans-serif;
+  margin: 0;
 }
 ul {
   list-style: none;
